<?xml version="1.0"?>
<package>
  <name>media_msgs_java</name>
  <version>0.1.79</version>
  <description>Java generation for media_msgs package</description>

  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>media_msgs</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>

</package>
