<?xml version="1.0"?>
<package>
  <name>smarthome_media_msgs_java</name>
  <version>0.1.81</version>
  <description>Java generation for smarthome_media_msgs package</description>

  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickael Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>genjava</build_depend>
  <build_depend>rosjava_messages</build_depend>
  
  <build_depend>smarthome_media_msgs</build_depend>

  <!-- needed for genjava rosdistro dependency -->
  <build_depend>python-rosdistro</build_depend>
  <!-- needed for genjava roslib dependency -->
  <build_depend>roslib</build_depend>

  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>genjava</run_depend>

</package>
